--- a/07_Templates/01_ProjectProposal/ProjectProposalLaTeX/ProjectProposal.tex
+++ b/07_Templates/01_ProjectProposal/ProjectProposalLaTeX/ProjectProposal.tex
@@ -14,15 +14,17 @@
 \theoremstyle{definition}
 \newtheorem{example}{Example}
 
+\newtheorem{ourVersion}{ \linebreak}
+
 \newenvironment{explanation}{%
    \setlength{\parindent}{0pt}
    \itshape
    \color{blue}
 }{}
 
-\newcommand{\projectname}{Template}
-\newcommand{\productname}{School Health Service Assistant}
-\newcommand{\projectleader}{P. Bauer}
+\newcommand{\projectname}{Schulplaner}
+\newcommand{\productname}{Education Planner}
+\newcommand{\projectleader}{A. Hammash}
 \newcommand{\documentstatus}{In process}
 %\newcommand{\documentstatus}{Submitted}
 %\newcommand{\documentstatus}{Released}
@@ -56,7 +58,7 @@ Version & \version \\ \hline
 \begin{tabular}{|l|l|l|}
 \hline
 \cellcolor[gray]{0.5}\textcolor{white}{Date} & \cellcolor[gray]{0.5}\textcolor{white}{Author} & \cellcolor[gray]{0.5}\textcolor{white}{Change} \\ \hline
-November 03, 2011&P. Bauer/T. Stütz&First version \\ \hline
+October 10, 2021&H. Hajredini/ A. Hammash/ D. Fetaj&First version \\ \hline
 \end{tabular}
 \pagebreak
 
@@ -64,120 +66,86 @@ November 03, 2011&P. Bauer/T. Stütz&First version \\ \hline
 \pagebreak
 
 \section{Introduction}
-\begin{explanation}
-The management bases the decision to approve a project within the scope of a Project Progress Decision of the Decision Gate Project Approved on the project proposal, which is not prepared within the framework of the V-Model. Based on a project or system idea, the acquirer systematically describes the necessity of a project based on feasibility, affordability, market, and economic efficiency criteria.
-The project proposal processes subjects like the initial situation, existing framework conditions, project objectives and system concepts, chances and risks, and the economic efficiency.
 
-All written text in this color is explanatory and has to be deleted when the document is released. The example given here is only a skeleton. Your text has to be more elaborate and explanatory.
-\end{explanation}
+\begin{ourVersion}
+Our project focusses on making it easier for students to keep track of their due dates. 
+We are planning on using android studio to make this app. 
+By daily reminders, an overview of the next deadline-days and also a week and month overview of the schools timetable, 
+we want to get a different school planer than the usual ones. 
+\end{ourVersion}
 \pagebreak
 
 \section{Initial Situation}
-\begin{explanation}
-The initial situation presents the assessment of the actual situation of an organizational unit or the entire organization of an agency or company. Thus a need for action, which may lead to a product or system vision, is recognizable. The vision may be developed into a project idea. The need for action may be initiated by several project or system ideas.
-The demonstration of capability gaps (i.e. the difference between the necessary planned capabilities and the actually existing capabilities) in a company or agency may clearly show an urgent need for action in order to increase the efficiency or reduce costs. This need for action is presented as product or system idea, leading frequently to a concrete project proposal. Correspondingly, the determination of the requirement to renew or improve a "technically obsolete" system (so-called "system regeneration") or the recognition of market chances for a new product or system may lead to a project idea. The applicable data must be developed for the project proposal.
-Research programs or studies may also be the basis for project ideas; they will be concretized in a project proposal.
 
-The basic question could be summarized in German as follows:
-\begin{itemize}
-	\item Die Ist-Fähigkeiten der Organisation (was können wir?)
-	\item Die Soll-Fähigkeiten der Organisation (was wollen wir können?)
-	\item Ein Soll-Ist-Fähigkeitenvergleich (wo liegen die Defizite?)
-	\item Ein Fähigkeitsvergleich nach vorgegebenen Bewertungskriterien
-\end{itemize}
-\end{explanation}
-
-\begin{example}
-A doctor in a (primary) school examines the primary school students periodically. (S)he must report the results of this examinations and inform parents about medical defects. Sometimes the doctor has to refer students in problematic health condition to specialists.
-
-The creation of the paperwork is time-consuming since the health data collected during the examinations has to be edited several times (once for the reports, once for the parents information, once for referral, etc. The information retrieval concerning the medical history of students is also time-consuming. The time spent on this work would be better used on direct contact time with students.
-
-The documentation of the examinations can be automated. So the reports and further documents will be generated. The medical history will be persisted automatically.
-\end{example}
-
+\begin{ourVersion}
+Students already have an overview over their timetable by using Webuntis and they also can work with calendars where they can enter the next deadline-days, homework or other important things.
+But by working with two or more apps one could lose the overview very easily and it also could be very annoying to continually change the app for things that could be possible to use in just one app. \linebreak \linebreak
+Verbesserung: \linebreak
+Genauere Beschreibung der jetzigen Situation (was besser gemacht werden muss) \linebreak
+Was fehlt in den schon bestehenden Apps? Was werden wir ergänzen? \linebreak
+It can be used as a class- school planer (Ergänzung!!!) 
+\end{ourVersion}
 \pagebreak
 
 \section{General Conditions and Constraints}
-\begin{explanation}
-This subject describes the framework conditions to be observed by all stakeholders when the project idea is implemented into concrete measures for realizing the system. Framework conditions, e.g., budget situation, existing know-how, legal provisions, cooperations, commitment to partners and deadlines, may be turned into specifications for project execution.
-Technical framework conditions, e.g., development environments and platforms, IT infrastructure, applicable standards and regulations, or specifications of off-the-shelf products, lead to additional (non-functional) requirements for system development.
-\end{explanation}
 
-\begin{example}
-The proposed system has to the deal with the following constraints:
-\begin{itemize}
-\item The information about the medical condition of the pupils is strictly confidential.
-\item The GUI of the information system must be intuitive.
-\item The application must have a small footprint and a local database.
-\item A backup concept is mandatory
-\item The application is multi-language capable (english and german)
-\end{itemize}
-\end{example}
+\begin{ourVersion}
+The proposed system has to the deal with the following constraints: \linebreak
+
+Technical Constraints: \linebreak
+
+The app should sync with Webuntis and also a
+backend is necessary to store common events (for the whole class) centrally.
+Further on, Webuntis, common class events and personal events have to be merged in one view. \linebreak
+
+Organisational Constraints: \linebreak
+Userdata (which userdata?) has to be encrypted. \linebreak
+
+How would this app be used by students?? (desktop version?)
+
+\end{ourVersion}
 
 \pagebreak
 
 \section{Project Objectives and System Concepts}
-\begin{explanation}
-In the Subject Project Objectives and System Concepts, the acquirer describes his vision of a new project or system on a high abstraction level. Project objectives and system concepts may concern several aspects, e.g., the introduction of innovations, the definition of objectives (quality, deadline and cost objectives), the operation of the system in its operating environment and the use of new, improved functionalities.
-\end{explanation}
 
-\begin{example}
-The project objectives can be summarized as follows:
-\begin{itemize}
-\item The doctor is documenting the examination results while examining the students
-\item Input form assists her/him to input information in a structured and easy way
-\item Common situations (need for vaccinations, check for need of dental brace, etc.) are a one-click-job for the doctor
-\item Info sheet for parents can be printed right after examination
-\item Report is a one-click-job at the end of the day
-\end{itemize}
-\end{example}
+\begin{ourVersion}
+The project’s use case will usually be like this: \linebreak
+By opening the app the students can see first what they have to do in the next time by a pop up which covers the whole screen and
+the Webuntis-Sync helps them knowing when the next lessons are canceled.
+They also can enter their Homework to its respective subject and schedule.
+By this, they can easily see if they have homework to do or not, and when a subject is chosen a more informative window will pop up showing exactly what the homework is.
+Students also have a clear overview of the next weeks or months. \linebreak
+Our plan is to be able to work with all these features in our app, so students can plan their whole week or month more easily and by including the timetable, they also would have a much better overview over the canceled hours or the coming school events.
+Homeworks and Tests shall be visually emphasized to remind the user of upcoming dead-lines. \linebreak
+Bilder als Beispiele!!!
+Wie wird auf die Server zugegriffen??
+
+\end{ourVersion}
 
 \pagebreak
 \section{Opportunities and Risks}
-\begin{explanation}
-The Subject Opportunities and Risks comprises data which are normally prepared in industrial business plans. Frequently, an anonymous market with potential acquirers, which could be interested in the new product or system idea, will be analyzed at first. Therefore, the contents of this subject is characterized by a certain uncertainty or fuzziness. The subjects examines the chances of achieving profit on the market with a specific product or system. In addition to the chances, the risks of failing on the market or sustaining losses with a product or system should be analyzed.
-\end{explanation}
 
-\begin{example}
-The project has the following opportunities:
-\begin{itemize}
-\item The doctor is able to increase his time with his patients.
-\item The time for bureaucratic work declines.
-\item The quality will increase
-\end{itemize}
+ \begin{ourVersion}
+The project’s opportunities are: \linebreak
+Wieso wollen wir diese App entwickeln? \linebreak
+Students won’t overlook homework and our app could reduce stress since the dates won’t be scattered around in various apps \linebreak	
 
-The following risk have to be taken into account.
-\begin{itemize}
-\item Data transfer of studentsÕ master data from legacy systems is problematic.
-\item There is no information about the legacy systems and their data structure.
-\item Further there is no information, whether the staff is capable and willing to supply the students master data (names, classes, ...).
-\end{itemize}
+Risks to consider: \linebreak
+Was wären probleme bei der Entwicklung?\linebreak
+Student may forget to enter their homework and also if class is split up, homework could be different.
+	
+ \end{ourVersion}
 
-\end{example}
 
 \pagebreak
 \section{Planning}
-\begin{explanation}
-The planning specifies the organizational and commercial project execution and system development aspects. The project organization, e.g., matrix organization and steering committees, and the responsibilities for the decision-making processes within project will be specified.
-The Project Leader will be appointed, his tasks will be defined. Available resources, funds and specialist personnel will be determined. Start and end date for the project will be specified. The planning can be based on the statements developed in the subject Project Objectives and System Concepts, which makes additional statements on feasibility, funding and schedules.
 
-The following parts must be included:
-\begin{itemize}
-\item List of major project milestones.
-\item Assign project lead and other outstanding roles to team members.
-\item Give a rough estimate how many resources you need (human resources, licenses, servers, etc.)
-\end{itemize}
-
-Answer the following questions when preparing this section:
-\begin{itemize}
-\item When will the project end?
-\item When will the project start?
-\item When will be a first prototype available?
-\item When does implementation work start?
-\item What are the big blocks of work to be done?
-\item Is this work doable in the given period of time?
-\item Do we need any other stuff to make our work (licenses, servers, É)?
-\end{itemize}
-\end{explanation}
+\begin{ourVersion}
+We plan on having the app show a synced-up week view from Webuntis and have it be interactable 
+so students can already write their homework on it, that will be our first mile-stone. 
+The roles of the team members will be that same and we’ll divide the workload be-tween us. 
+The app will be made in Android studio and the files may have to be saved lo-cally.
+\end{ourVersion}
 
 \end{document}  
