Corrected Opportunities and Risks as well as Planning in Project Proposaö

--- a/07_Templates/01_ProjectProposal/LAST_UPDATED ProjectProposalLaTeX/ProjectProposal.tex
+++ b/07_Templates/01_ProjectProposal/LAST_UPDATED ProjectProposalLaTeX/ProjectProposal.tex
@@ -120,15 +120,47 @@ There will be two views. The monthly-view, which will show a clearer overview of
 
 The project’s opportunities are:
 
-From our own experience, we noticed that keeping count of all the homeworks, deadlines and private events could get out of hands and many students start to fall behind. Keeping all the due dates at one spot will aid and motivate students on doing their assignments on time and get stuff done! 
+The App will collab with companies such as Google, Apple and Amazon to make it possible for the Voice Assistants to enter appointment dates easily via voice commands. 
+This allows the app to not only be usefull for students, but for busy people too, because it can also save shopping lists, making it helpful for adults too.
+An easy, straight forward to use app that mixes Notes, Calender and School and/or Work timetable.
 
 Risks to consider: 
-Student may forget to enter their homework and also if class is split up, homework could be different. The data must be encrypted before it is uploaded to the cloud.
+If webuntis gets outdated too soon this app won't have the chance to take off and develop.
+The cloud server the data is save in may crash or outright stop their service, forcing us to make our own server which is at the moment not possible.
+Webuntis and other partaking companies may deny our offer, resulting in big problems, depending what role the company plays in our app.
 	
  \end{ourVersion}
 
 
 \pagebreak
+
+\section{Milestones}
+\begin{ourVersion}
+\begin{center}
+\begin{tabular}{||c c c||}
+ \hline
+ Milestones & Status & Start date \\ [0.5ex] 
+ \hline\hline
+ Finding and getting comfortable with the working environment  & Running... & February 2022 \\ 
+ \hline   
+ First visual impession of app & Ready & February 2022 \\
+ \hline
+ save user input dates & Blocked & March 2022 \\
+ \hline
+ Sync with webuntis & Blocked & July 2022 \\
+ \hline
+ Saving Notes and Grocery Lists & Blocked & October 2022\\
+ \hline
+ Finilzing and refining the app & Blocked & Unknown \\ [1ex] 
+ \hline 
+
+\end{tabular}
+\end{center}
+\end{ourVersion}
+
+
+\pagebreak
+
 \section{Planning}
 
 \begin{ourVersion}
